tried to add an environment variable to make things work on everyone's computer